# mdisplay

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: backend.rs  main.rs  rules.rs  settings.rs  ui.rs  wayland.rs
