[package]
name = "mdisplay"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
iced = { version = "0.14.0", features = ["advanced", "canvas"] }
iced_fonts = { version = "0.3", features = ["bootstrap"] }
futures-timer = "3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wayland-backend = "0.3"
wayland-client = "0.31"
wayland-protocols-wlr = "0.3"
